# lentera-nuansa-backend

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  config.yml
include/: app.h  chat_server.h  chat_server_handler.h  chat_types.h  global_config.h  init.h  program_options.h
include/nuansa/config/: config.h  config_types.h
include/nuansa/core/: app.h
include/nuansa/database/: db_connection_guard.h  db_connection_pool.h
include/nuansa/handler/: websocket_client.h  websocket_handler.h  websocket_server.h  websocket_state_machine.h
include/nuansa/messages/: base_message.h  core_message.h  message_header.h  message_types.h
include/nuansa/models/: user.h
include/nuansa/pch/: framework.h  pch.h
include/nuansa/plugin/: iplugin.h  plugin_manager.h
include/nuansa/services/auth/: auth_message.h  auth_service.h  auth_status.h  auth_types.h  register_message.h
include/nuansa/services/chat/: chat_message.h
include/nuansa/services/token/: token_repository.h  token_service.h
include/nuansa/services/user/: iuser_service.h  user_service.h
include/nuansa/utils/: common.h  framework.h  http_client.h  option_constants.h  pch.h  program_options.h  random_generator.h  validation.h
include/nuansa/utils/crypto/: crypto_util.h
include/nuansa/utils/errors/: circuit_breaker_error.h  database_error.h  exception.h  websocket_error.h
include/nuansa/utils/exception/: circuit_breaker_exception.h  database_exception.h  exception.h  message_exception.h  websocket_exception.h
include/nuansa/utils/log/: log.h
include/nuansa/utils/pattern/: circuit_breaker.h
include/nuansa/utils/patterns/: circuit_breaker.h
include/nuansa/utils/validation/: validation.h
src/: app.cpp  chat_server_handler.cpp  global_config.cpp  init.cpp  main.cpp  program_options.cpp
src/config/: config.cpp
src/core/: app.cpp
src/database/: db_connection_pool.cpp
src/handler/: nuansa_state_machine.cpp  websocket_handler.cpp
src/plugin/: plugin_manager.cpp
src/services/auth/: auth_service.cpp
src/services/token/: token_repository.cpp  token_service.cpp
src/services/user/: user.cpp  user_service.cpp
src/utils/: http_client.cpp  program_options.cpp  random_generator.cpp  validation.cpp
src/utils/crypto/: crypto_util.cpp
tests/: chat_server_handler_test.cpp  main.cpp
tests/unit/handlers/: websocket_handler_test.cpp
tests/unit/services/user/: user_service_test.cpp
tests/utils/: db_test.h.cpp
